--- a/src/app/plant-list/plant-list.component.scss
+++ b/src/app/plant-list/plant-list.component.scss
@@ -25,6 +25,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  cursor: pointer;
 
   .plant-name {
     font-weight: bold;
