--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -8,7 +8,7 @@ $color-bg: #ecf0f1;
 $color-card-bg: #fff;
 $color-header-bg: #2f3a47;
 $color-header-text: #ffffff;
-$color-division: #35a8b8;
+$color-division: #35efd9;
 $color-address-title: #555;
 $color-address-text: #777;
 $color-description-text: #333;
