--- a/src/app/plant-list/plant-list.component.scss
+++ b/src/app/plant-list/plant-list.component.scss
@@ -3,8 +3,10 @@
 .plant-list {
   display: grid;
   grid-gap: 1rem;
-  padding: 1rem;
   background-color: $color-bg;
+  max-width: 1200px;
+  margin: 0 auto 2rem;
+  padding: 11px 1rem;
 
   grid-template-columns: repeat(1, 1fr);
 
@@ -15,6 +17,22 @@
   @media (min-width: $breakpoint-desktop) {
     grid-template-columns: repeat(5, 1fr);
   }
+}
+
+.plant-list-container {
+  max-width: 1200px;
+  padding: 0 1rem 1rem;
+  margin: calc(1rem - 77px) auto 2rem;
+}
+
+.plant-list-header {
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: left;
+  color:$color-card-bg;
+  background-color: $color-header-bg;
+  margin: 0 auto;
+  padding: 12px;
 }
 
 .plant-card {
