--- a/src/app/plant-list/plant-list.component.html
+++ b/src/app/plant-list/plant-list.component.html
@@ -1,4 +1,4 @@
-<div class="plant-list-container">
+<div class="plant-list-container" *ngIf="plants.length > 0">
   <h2 class="plant-list-header">Plants</h2>
 
   <div class="plant-list">
