--- a/src/app/plant-list/plant-list.component.scss
+++ b/src/app/plant-list/plant-list.component.scss
@@ -7,6 +7,8 @@
   max-width: 1200px;
   margin: 0 auto 2rem;
   padding: 11px 1rem;
+  max-height: 570px;
+  overflow-y: auto;
 
   grid-template-columns: repeat(1, 1fr);
 
