--- a/src/app/plant-list/plant-list.component.html
+++ b/src/app/plant-list/plant-list.component.html
@@ -21,6 +21,6 @@
     [disabled]="loading"
     class="load-more-btn"
   >
-    {{ loading ? 'Loading...' : 'More Results' }}
+    {{ loading ? 'Loading...' : 'Load More Results' }}
   </button>
 </div>
