Adjusted some styles

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -4,7 +4,7 @@
 $color-primary: #2c3e50;
 $color-secondary: #2980b9;
 $color-accent: #2c7be5;
-$color-bg: #ecf0f1;
+$color-bg: #f9f9f9;
 $color-card-bg: #fff;
 $color-header-bg: #2f3a47;
 $color-header-text: #ffffff;
