--- a/src/app/plant-list/plant-list.component.scss
+++ b/src/app/plant-list/plant-list.component.scss
@@ -1,5 +1,7 @@
 @use '../styles/variables' as *;
 
+$color-text: #929395;
+
 .plant-list {
   display: grid;
   grid-gap: 1rem;
@@ -54,7 +56,7 @@
   }
 
   .plant-info {
-    //color: $color-text;
+    color: $color-text;
     font-size: 0.9rem;
 
     p {
