--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -1,7 +1,7 @@
 @use 'sass:color';
 
 // Colors
-$color-primary: #2c3e50;
+$color-primary: #4D5C6E;
 $color-secondary: #2980b9;
 $color-accent: #2c7be5;
 $color-bg: #f9f9f9;
