Added some enhancements & improvements

--- a/src/app/plant-detail/plant-detail.component.html
+++ b/src/app/plant-detail/plant-detail.component.html
@@ -23,5 +23,7 @@
 </div>
 
 <ng-template #loadingTpl>
-  <p>Loading plant details...</p>
+  <div class="loading-container">
+    <p>Loading plant details...</p>
+  </div>
 </ng-template>
