--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@use 'app/styles/common-style';
 @use 'app/styles/variables' as vars;
+
