Added some enhancements & improvements

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -13,6 +13,7 @@ $color-address-title: #555;
 $color-address-text: #777;
 $color-description-text: #333;
 $color-btn-text: #ffffff;
+$color-loader: #106259;
 
 // Replace darken/lighten with color.adjust
 $color-btn-hover-bg: color.adjust($color-secondary, $lightness: -10%);
