--- a/src/app/styles/common-style.scss
+++ b/src/app/styles/common-style.scss
@@ -1,14 +1,29 @@
 @use '../styles/variables' as *;
 
+@keyframes fadeInScale {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 .loading-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 150px; /* or desired height */
-  font-size: 1.2rem;
-  color: $color-address-title;
+  height: 150px;
+  font-size: 2rem;
+  color: $color-loader;
   font-weight: 600;
   background-color: $color-card-bg;
   border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+
+  animation: fadeInScale 0.4s ease-out;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+
 }
