--- a/src/app/styles/common-style.scss
+++ b/src/app/styles/common-style.scss
@@ -27,3 +27,27 @@
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 
 }
+
+@mixin custom-scrollbar($thumb-color, $track-color: #f1f1f1, $hover-color: null) {
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: $track-color;
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $thumb-color;
+    border-radius: 4px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: if($thumb-color, $hover-color, darken($thumb-color, 10%));
+  }
+}
+
+
