Added some improvements

--- a/src/app/plant-list/plant-list.component.html
+++ b/src/app/plant-list/plant-list.component.html
@@ -19,8 +19,7 @@
     *ngIf="next"
     (click)="loadPlants()"
     [disabled]="loading"
-    class="load-more-btn"
-  >
+    class="load-more-btn">
     {{ loading ? 'Loading...' : 'Load More Results' }}
   </button>
 </div>
