--- a/src/app/components/plant-list/plant-list.component.scss
+++ b/src/app/components/plant-list/plant-list.component.scss
@@ -1,5 +1,5 @@
-@use '../styles/variables' as *;
-@use '../styles/common-style' as *;
+@use '../../styles/variables' as *;
+@use '../../styles/common-style' as *;
 
 $color-text: #929395;
 
